// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a success message correctly 1`] = `
<Link
  className="components-message-index-m__success components-message-index-m__message"
  replace={false}
  role="alert"
  to="/link/to"
>
  <div
    className="components-message-index-m__text"
  >
    <h4
      className="components-message-index-m__title"
    >
      The Title
    </h4>
    <div
      className="components-message-index-m__detail"
    >
      <div
        id="child"
      />
    </div>
  </div>
</Link>
`;

exports[`should render an error message correctly 1`] = `
<Link
  className="components-message-index-m__error components-message-index-m__message"
  replace={false}
  role="alert"
  to="/link/to"
>
  <div
    className="components-message-index-m__text"
  >
    <h4
      className="components-message-index-m__title"
    >
      The Title
    </h4>
    <div
      className="components-message-index-m__detail"
    >
      <div
        id="child"
      />
    </div>
  </div>
</Link>
`;

exports[`should render an info message correctly 1`] = `
<Link
  className="components-message-index-m__info components-message-index-m__message"
  replace={false}
  role="alert"
  to="/link/to"
>
  <div
    className="components-message-index-m__text"
  >
    <h4
      className="components-message-index-m__title"
    >
      The Title
    </h4>
    <div
      className="components-message-index-m__detail"
    >
      <div
        id="child"
      />
    </div>
  </div>
</Link>
`;
